# G01_IMDb_DistilBERT_Optimiseurs

./: Dockerfile  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb  exploration.ipynb
outputs/results/: best_config.json  landscape_metrics.csv  random_search_results.csv
src/: data_loader.py  loss_landscape.py  model_setup.py  optimization.py  visualization.py
