[tool.poetry]
name = "g01-imdb-distilbert-optimiseurs"
version = "1.0.0"
description = "Fine-tuning DistilBERT sur IMDb - Benchmark d'Optimiseurs avec Random Search"
authors = ["Groupe G01 <groupe01@issea.cm>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Deep Learning
torch = ">=2.0.0"
transformers = ">=4.35.0"
datasets = ">=2.14.0"
accelerate = ">=0.24.0"

# ML & Stats
scikit-learn = ">=1.3.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scipy = ">=1.11.0"

# Visualisation statique
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"

# Dashboard interactif
dash = ">=2.14.0"
dash-bootstrap-components = ">=1.5.0"
plotly = ">=5.17.0"

# Utilitaires
tqdm = ">=4.65.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
notebook = ">=7.0.0"
ipykernel = ">=6.25.0"

[tool.poetry.scripts]
pipeline  = "main:main"
dashboard = "dashboard:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Dépôt GitHub" = "https://github.com/VOTRE_USERNAME/G01_IMDb_DistilBERT_Optimiseurs"
